--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "prettier": "^1.17.0"
     },
     "dependencies": {
+        "@web/parse5-utils": "^1.3.0",
         "itty-router": "^2.1.9",
+        "parse5": "^7.1.2",
         "serverless-cloudflare-workers": "^1.2.0"
     }
 }
