--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     },
     "dependencies": {
         "@web/parse5-utils": "^1.3.0",
+        "bad-words": "^3.0.4",
+        "fuse.js": "^6.6.2",
         "itty-router": "^2.1.9",
+        "minimist": "^1.2.8",
         "parse5": "^7.1.2",
         "serverless-cloudflare-workers": "^1.2.0"
     }
