--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@parse5/tools": "^0.1.0",
+        "@tsndr/cloudflare-worker-jwt": "^2.2.1",
         "bad-words": "^3.0.4",
         "dayjs": "^1.11.8",
         "fuse.js": "^6.6.2",
@@ -23,6 +24,7 @@
         "mathjs": "^11.7.0",
         "minimist": "^1.2.8",
         "parse5": "^7.1.2",
+        "preact": "^10.16.0",
         "wrangler": "^3.1.0"
     }
 }
